iOS: More work on adding editing features to MarkersPresenter and MarkersViewController. Added custom UITableView to block scrolling when using a slider.

--- a/MPfm/MPfm.iOS/XIB/iPad/MarkersViewController_iPad.xib
+++ b/MPfm/MPfm.iOS/XIB/iPad/MarkersViewController_iPad.xib
@@ -29,7 +29,7 @@
                             <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                             <nil key="highlightedColor"/>
                         </label>
-                        <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" id="6">
+                        <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" id="6" customClass="MPfmTableView">
                             <rect key="frame" x="20" y="56" width="728" height="968"/>
                             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                             <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
